--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -46,7 +46,7 @@
 <div class="gifs container">
     <div class="chip" th:text="${category.name}">category name</div>
     <div class="row">
-     
+        <form action="">
         <div th:each="gif : ${gifs}" class="col s12 l4">
       
             <a th:href="@{'/gif/' + ${gif.name}}">
@@ -55,6 +55,7 @@
                 <a href="#" th:class="(${gif.favorite}? 'un' : '') + 'mark favorite'"></a>
             </a>
         </div>
+        </form>
     </div>
 </div>
 
