--- a/src/main/resources/templates/gif-details.html
+++ b/src/main/resources/templates/gif-details.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" th:href="@{/vendor/materialize/css/materialize.css}" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" th:href="@{/app.css}" />
-
     <title th:text="'giflib | ' + ${gif.name}">Kwejk</title>
+    <title>Kwejk</title>
 </head>
 <body>
     <div class="navbar-fixed">
